--- a/Clock_widget/App.xaml
+++ b/Clock_widget/App.xaml
@@ -1,8 +1,8 @@
-﻿<Application x:Class="Windows_10_app.App"
+﻿<Application x:Class="Clock_widget.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Windows_10_app"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:Clock_widget"
+             StartupUri="View/MainWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
