--- a/Clock_widget/View/MainWindow.xaml
+++ b/Clock_widget/View/MainWindow.xaml
@@ -12,8 +12,10 @@
         WindowStyle="None"
         BorderThickness="1"
         BorderBrush="#88ffffff"
-        WindowStartupLocation="Manual" 
-        Top="5">
+        WindowStartupLocation="Manual"
+        ShowInTaskbar="False"
+        MouseDown="Window_MouseDown"
+        Loaded="Window_Loaded">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -27,19 +29,33 @@
         <Grid.Resources>
 
         </Grid.Resources>
-        <Button
-        Name="btnClose"
-        Click="CloseApp"
-        Grid.Row="0" Grid.RowSpan="2"
-        Content="x"
-        Foreground="White" Background="#00000000" BorderThickness="0"
-        Padding="10" Height="33" Width="33" HorizontalAlignment="Right" VerticalAlignment="Top"/>
+        <Button Name="btnClose"
+                Click="CloseApp"
+                Grid.Row="0" 
+                Grid.RowSpan="2"
+                Content="x"
+                Foreground="White" 
+                Background="#00000000" 
+                BorderThickness="0"
+                Padding="10" 
+                Height="33" 
+                Width="33" 
+                HorizontalAlignment="Right" 
+                VerticalAlignment="Top"/>
         <TextBlock Name="digitalClock" 
-               Grid.Row="1" Grid.ColumnSpan="1" HorizontalAlignment="Center" VerticalAlignment="Bottom"
-               FontSize="115" Foreground="White" FontFamily="Roboto Thin"/>
+                   Grid.Row="1"
+                   Grid.ColumnSpan="1"
+                   HorizontalAlignment="Center" 
+                   VerticalAlignment="Bottom"
+                   FontSize="115" 
+                   Foreground="White" 
+                   FontFamily="Roboto Thin"/>
         <TextBlock Name="dateClock"
-               Grid.Row="2" Grid.ColumnSpan="2"
-               HorizontalAlignment="Center" VerticalAlignment="Top"
-               FontSize="50" Foreground="White" FontFamily="Roboto Thin"/>
+                   Grid.Row="2" Grid.ColumnSpan="2"
+                   HorizontalAlignment="Center" 
+                   VerticalAlignment="Top"
+                   FontSize="50" 
+                   Foreground="White" 
+                   FontFamily="Roboto Thin"/>
     </Grid>
 </Window>
